// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 WobnI"
  id="FileImport_Standard"
  rows={null}
>
  <label
    className="FileImport__NewLabel-sc-1hxbe60-1 cyFTlZ"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Browse File
    </p>
    <input
      className="FileImport__NewInput-sc-1hxbe60-0 jPFzvE"
      onChange={[Function]}
      type="file"
    />
  </label>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
    id="file-textinput-FileImport_Standard_container"
    rows={null}
  >
    <input
      autoComplete="off"
      className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
      cols=""
      disabled={false}
      id="file-textinput-FileImport_Standard"
      list={null}
      name="file-textinput-FileImport_Standard"
      onBlur={null}
      onChange={null}
      onFocus={null}
      onKeyPress={null}
      onKeyUp={null}
      pattern={null}
      placeholder={null}
      rows=""
      type="text"
    />
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 btkYQP Card__CardGridWrapper-sc-1g3s676-4 jvwIBf"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 WobnI"
    id="FileImport_Types"
    rows={null}
  >
    <label
      className="FileImport__NewLabel-sc-1hxbe60-1 cyFTlZ"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Browse File
      </p>
      <input
        className="FileImport__NewInput-sc-1hxbe60-0 jPFzvE"
        onChange={[Function]}
        type="file"
      />
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 egAHCz TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="file-textinput-FileImport_Types_container"
      rows={null}
    >
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 bwrDKw"
        cols=""
        disabled={false}
        id="file-textinput-FileImport_Types"
        list={null}
        name="file-textinput-FileImport_Types"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern={null}
        placeholder={null}
        rows=""
        type="text"
      />
    </section>
  </section>
</section>
`;
